k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-docker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-docker-app
  template:
    metadata:
      labels:
        app: test-docker-app
    spec:
      containers:
        - name: test-docker-app
          image: mal91r/test-docker-app:4
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: test-docker-app
spec:
  type: ClusterIP
  selector:
    app: test-docker-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-docker-app
spec:
  tls:
    - hosts:
        - my-app.local
      secretName: test-docker-app-secret-tls
  ingressClassName: nginx
  rules:
    - host: my-app.local
      http:
        paths:
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name:  test-docker-app
                port:
                  number: 8080
          - path: /MyController
            pathType: Prefix
            backend:
              service:
                name: test-docker-app
                port:
                  number: 8080
