pg-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /login
              port: 80
            initialDelaySeconds: 45
            periodSeconds: 15
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /login
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 2
          volumeMounts:
            - name: pgadmin-storage
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: pgadmin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  tls:
    - hosts:
        - pg-admin.local
      secretName: pg-admin-secret-tls
  ingressClassName: nginx
  rules:
    - host: pg-admin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
